<resources>
    <string name="app_name">Parking System</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="Register">Register</string>
    <string name="name">Name</string>
    <string name="phoneNo">Phone No</string>
    <string name="SeatNo">Seat No</string>
    <string name="passwordwillbesend">Password Will be Send to Your Email Id</string>
    <string name="SignUp">Sign Up</string>
    <string name="title_activity_parking_places">ParkingPlaces</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out">Sign out</string>
    <string name="park">Park A Place</string>
    <string name="history">Parking History</string>
    <string name="cancel_parking">Cancel Parking</string>
    <string name="share_review">FeedBack</string>
    <string name="about_us">About Us</string>
    <string name="view_user">View User</string>
    <string name="see_feedback">See Feedback</string>
    <string name="third_floor">Third Floor</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send">Send Feedback</string>
    <string name="feedback">Write Feedback Here...</string>
    <string name="parking">park</string>
    <string name="first_floor">first floor</string>
    <string name="second_floor">Second Floor</string>
    <string name="pickTime">Pick Time</string>
    <string name="bookFrom">Time From</string>
    <string name="bookTo">Time To</string>
    <string name="book">Book</string>
    <string name="hours">Hours</string>
    <string name="choose_date_or_time">Choose Date or Time:</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="for_hour">For(Hours)</string>
    <string name="feedback_here">Feedback</string>
    <string name="see_reply">See Reply</string>
    <string name="type">Type</string>
    <string name="remove">Remove</string>
    <string name="no_data_to_display">No data</string>
    <string name="admin">From Admin</string>

    <string-array name="hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
