<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:scrollbarFadeDuration="2000"
    tools:context=".BookingDetails">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="15dp"
        android:text="@string/bookFrom"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/time_from"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_margin="15dp"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center">
    <Button
        android:id="@+id/pick_time_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickTime"
        android:background="@color/colorPrimary"
        />
    </LinearLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <TextView
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:textSize="18sp"
           android:layout_weight=".65"
           android:layout_margin="15dp"
           android:text="@string/hours"
           android:gravity="center"
           />
       <Spinner
            android:id="@+id/hour"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight=".35"
           android:layout_margin="15dp"

           />



   </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center">
            <Button
                android:id="@+id/book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book"
               android:background="@color/colorPrimary"
                />
        </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/places"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
        <LinearLayout
            android:id="@+id/gone_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="gone">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data_to_display"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>