<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Userdetails"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView
            
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_weight=".15"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:textSize="20sp"

             />

    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp">
    <TextView

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:layout_weight=".15"
        android:textSize="20sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".35"
        android:textSize="20sp"

         />

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/SeatNo"
            android:layout_weight=".15"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/seatNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:textSize="20sp"

             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <TextView

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_weight=".15"
            android:textSize="20sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:textSize="20sp"

             />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">
        <Button
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:background="@color/colorPrimary"/>
    </LinearLayout>
</LinearLayout>